@@ -3,6 +3,8 @@ package uk.gov.hmcts.reform.civil.service;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -38,7 +40,6 @@ class LocationReferenceDataServiceTest {
 
     private LocationRefData loc1;
     private LocationRefData loc2;
-    private LocationRefData loc3;
 
     @BeforeEach
     void setup() {
@@ -68,117 +69,118 @@ class LocationReferenceDataServiceTest {
             .setCourtStatus("Open")
             .setIsCaseManagementLocation("Y")
             .setIsHearingLocation("Y");
-
-        loc3 = new LocationRefData()
-            .setSiteName("Site C")
-            .setCourtAddress("Address C")
-            .setPostcode("CC1 1CC")
-            .setRegion("Scotland")
-            .setEpimmsId("333")
-            .setCourtLocationCode("CCC")
-            .setCourtStatus("Closed")
-            .setIsCaseManagementLocation("N")
-            .setIsHearingLocation("N");
     }
 
-    @Test
-    void shouldReturnCNBcLocation() {
+    @ParameterizedTest
+    @CsvSource({"AAA6", "AAA7"})
+    void shouldReturnCNBcLocation(String serviceId) {
         when(courtVenueService.getCourtVenueByName(generatedAuth, auth,
-                                                   LocationReferenceDataService.CIVIL_NATIONAL_BUSINESS_CENTRE))
-            .thenReturn(List.of(loc1));
+                                                   LocationReferenceDataService.CIVIL_NATIONAL_BUSINESS_CENTRE,
+                                                   serviceId))
+            .thenReturn(getMockLocationList(serviceId));
 
-        LocationRefData result = service.getCnbcLocation(auth);
+        LocationRefData result = service.getCnbcLocation(auth, serviceId);
 
-        assertThat(result).isEqualTo(loc1);
+        assertThat(result).isEqualTo(getMockLocationList(serviceId).getFirst());
     }
 
-    @Test
-    void shouldReturnEmptyWhenCNBcNotFound() {
-        when(courtVenueService.getCourtVenueByName(any(), any(), any()))
+    @ParameterizedTest
+    @CsvSource({"AAA6", "AAA7"})
+    void shouldReturnEmptyWhenCNBcNotFound(String serviceId) {
+        when(courtVenueService.getCourtVenueByName(any(), any(), any(), any()))
             .thenReturn(List.of());
 
-        LocationRefData result = service.getCnbcLocation(auth);
+        LocationRefData result = service.getCnbcLocation(auth, serviceId);
 
         assertThat(result.getSiteName()).isNull();
     }
 
-    @Test
-    void shouldReturnCcmccLocation() {
+    @ParameterizedTest
+    @CsvSource({"AAA6", "AAA7"})
+    void shouldReturnCcmccLocation(String serviceId) {
         when(courtVenueService.getCourtVenueByName(generatedAuth, auth,
-                                                   LocationReferenceDataService.COUNTY_COURT_MONEY_CLAIMS_CENTRE))
-            .thenReturn(List.of(loc2));
+                                                   LocationReferenceDataService.COUNTY_COURT_MONEY_CLAIMS_CENTRE,
+                                                   serviceId))
+            .thenReturn(getMockLocationList(serviceId));
 
-        LocationRefData result = service.getCcmccLocation(auth);
+        LocationRefData result = service.getCcmccLocation(auth, serviceId);
 
-        assertThat(result).isEqualTo(loc2);
+        assertThat(result).isEqualTo(getMockLocationList(serviceId).getFirst());
     }
 
-    @Test
-    void shouldReturnCourtsForDefaultJudgments() {
-        when(courtVenueService.getCMLAndHLCourts(generatedAuth, auth))
-            .thenReturn(List.of(loc1, loc2));
+    @ParameterizedTest
+    @CsvSource({"AAA6", "AAA7"})
+    void shouldReturnCourtsForDefaultJudgments(String serviceId) {
+        when(courtVenueService.getCMLAndHLCourts(generatedAuth, auth, serviceId))
+            .thenReturn(getMockLocationList(serviceId));
 
-        List<LocationRefData> result = service.getCourtLocationsForDefaultJudgments(auth);
+        List<LocationRefData> result = service.getCourtLocationsForDefaultJudgments(auth, serviceId);
 
-        assertThat(result).containsExactly(loc1, loc2);
+        assertThat(result).isEqualTo(getMockLocationList(serviceId));
     }
 
-    @Test
-    void shouldReturnSortedEnglandAndWalesCourtsForGA() {
-        when(courtVenueService.getCMLAndHLCourts(generatedAuth, auth))
-            .thenReturn(List.of(loc1, loc2, loc3));
+    @ParameterizedTest
+    @CsvSource({"AAA6", "AAA7"})
+    void shouldReturnSortedEnglandAndWalesCourtsForGA(String serviceId) {
+        when(courtVenueService.getCMLAndHLCourts(generatedAuth, auth, serviceId))
+            .thenReturn(getMockLocationList(serviceId));
 
-        List<LocationRefData> result = service.getCourtLocationsForGeneralApplication(auth);
+        List<LocationRefData> result = service.getCourtLocationsForGeneralApplication(auth, serviceId);
 
-        assertThat(result).containsExactly(loc1, loc2);
-        assertThat(result.get(0).getSiteName()).isEqualTo("Site A");
+        assertThat(result).isEqualTo(getMockLocationList(serviceId));
+        assertThat(result.getFirst().getSiteName()).isEqualTo("AAA6".equals(serviceId) ? "Site A" : "Site B");
     }
 
-    @Test
-    void shouldReturnCourtLocationsByEpimmsId() {
-        when(courtVenueService.getCourtByEpimmsId(generatedAuth, auth, "111"))
-            .thenReturn(List.of(loc1));
+    @ParameterizedTest
+    @CsvSource({"AAA6", "AAA7"})
+    void shouldReturnCourtLocationsByEpimmsId(String serviceId) {
+        when(courtVenueService.getCourtByEpimmsId(generatedAuth, auth, "111", serviceId))
+            .thenReturn(getMockLocationList(serviceId));
 
-        List<LocationRefData> result = service.getCourtLocationsByEpimmsId(auth, "111");
+        List<LocationRefData> result = service.getCourtLocationsByEpimmsId(auth, "111", serviceId);
 
-        assertThat(result).containsExactly(loc1);
+        assertThat(result).isEqualTo(getMockLocationList(serviceId));
     }
 
-    @Test
-    void shouldReturnCourtLocationsByEpimmsIdWithCML() {
-        when(courtVenueService.getCMLCourtByEpimmsId(generatedAuth, auth, "111"))
-            .thenReturn(List.of(loc1));
+    @ParameterizedTest
+    @CsvSource({"AAA6", "AAA7"})
+    void shouldReturnCourtLocationsByEpimmsIdWithCML(String serviceId) {
+        when(courtVenueService.getCMLCourtByEpimmsId(generatedAuth, auth, "111", serviceId))
+            .thenReturn(getMockLocationList(serviceId));
 
-        List<LocationRefData> result = service.getCourtLocationsByEpimmsIdWithCML(auth, "111");
+        List<LocationRefData> result = service.getCourtLocationsByEpimmsIdWithCML(auth, "111", serviceId);
 
-        assertThat(result).containsExactly(loc1);
+        assertThat(result).isEqualTo(getMockLocationList(serviceId));
     }
 
-    @Test
-    void shouldReturnHearingLocationCourts() {
-        when(courtVenueService.getHearingLocationCourts(generatedAuth, auth))
-            .thenReturn(List.of(loc1, loc2));
+    @ParameterizedTest
+    @CsvSource({"AAA6", "AAA7"})
+    void shouldReturnHearingLocationCourts(String serviceId) {
+        when(courtVenueService.getHearingLocationCourts(generatedAuth, auth, serviceId))
+            .thenReturn(getMockLocationList(serviceId));
 
-        List<LocationRefData> result = service.getHearingCourtLocations(auth);
+        List<LocationRefData> result = service.getHearingCourtLocations(auth, serviceId);
 
-        assertThat(result).containsExactly(loc1, loc2);
+        assertThat(result).isEqualTo(getMockLocationList(serviceId));
     }
 
-    @Test
-    void shouldReturnMatchingLabelLocation() {
-        when(courtVenueService.getHearingLocationCourts(generatedAuth, auth))
-            .thenReturn(List.of(loc1));
+    @ParameterizedTest
+    @CsvSource({"AAA6", "AAA7"})
+    void shouldReturnMatchingLabelLocation(String serviceId) {
+        when(courtVenueService.getHearingLocationCourts(generatedAuth, auth, serviceId))
+            .thenReturn(getMockLocationList(serviceId));
 
-        String label = LocationReferenceDataService.getDisplayEntry(loc1);
+        String label = LocationReferenceDataService.getDisplayEntry(getMockLocationList(serviceId).getFirst());
 
-        Optional<LocationRefData> result = service.getLocationMatchingLabel(label, auth);
+        Optional<LocationRefData> result = service.getLocationMatchingLabel(label, auth, serviceId);
 
-        assertThat(result).contains(loc1);
+        assertThat(result).contains("AAA6".equals(serviceId) ? loc1 : loc2);
     }
 
-    @Test
-    void shouldReturnEmptyWhenLabelBlank() {
-        Optional<LocationRefData> result = service.getLocationMatchingLabel("", auth);
+    @ParameterizedTest
+    @CsvSource({"AAA6", "AAA7"})
+    void shouldReturnEmptyWhenLabelBlank(String serviceId) {
+        Optional<LocationRefData> result = service.getLocationMatchingLabel("", auth, serviceId);
         assertThat(result).isEmpty();
     }
 
@@ -194,22 +196,24 @@ class LocationReferenceDataServiceTest {
         assertThat(label).isEqualTo("Welsh A - Address A - AA1 1AA");
     }
 
-    @Test
-    void shouldReturnCourtLocationByThreeDigitCode() {
-        when(courtVenueService.getCourtVenueByLocationCode(generatedAuth, auth, "AAA"))
+    @ParameterizedTest
+    @CsvSource({"AAA6", "AAA7"})
+    void shouldReturnCourtLocationByThreeDigitCode(String serviceId) {
+        when(courtVenueService.getCourtVenueByLocationCode(generatedAuth, auth, "AAA", serviceId))
             .thenReturn(List.of(loc1));
 
-        LocationRefData result = service.getCourtLocation(auth, "AAA");
+        LocationRefData result = service.getCourtLocation(auth, "AAA", serviceId);
 
         assertThat(result).isEqualTo(loc1);
     }
 
-    @Test
-    void shouldReturnEmptyWhenNoCourtFoundByThreeDigitCode() {
-        when(courtVenueService.getCourtVenueByLocationCode(any(), any(), any()))
+    @ParameterizedTest
+    @CsvSource({"AAA6", "AAA7"})
+    void shouldReturnEmptyWhenNoCourtFoundByThreeDigitCode(String serviceId) {
+        when(courtVenueService.getCourtVenueByLocationCode(any(), any(), any(), any()))
             .thenReturn(List.of());
 
-        LocationRefData result = service.getCourtLocation(auth, "AAA");
+        LocationRefData result = service.getCourtLocation(auth, "AAA", serviceId);
 
         assertThat(result.getSiteName()).isNull();
     }
@@ -227,21 +231,29 @@ class LocationReferenceDataServiceTest {
             .setIsCaseManagementLocation("Y")
             .setIsHearingLocation("Y");
 
-        when(courtVenueService.getCourtVenueByLocationCode(any(), any(), any()))
+        when(courtVenueService.getCourtVenueByLocationCode(any(), any(), any(), any()))
             .thenReturn(List.of(loc1, duplicateLoc));
 
-        assertThatThrownBy(() -> service.getCourtLocation(auth, "AAA"))
+        assertThatThrownBy(() -> service.getCourtLocation(auth, "AAA", "AAA6"))
             .isInstanceOf(LocationRefDataException.class)
             .hasMessageContaining("More than one court location found");
     }
 
-    @Test
-    void shouldThrowExceptionWhenFilterFindsNone() {
-        when(courtVenueService.getCourtVenueByLocationCode(any(), any(), any()))
+    @ParameterizedTest
+    @CsvSource({"AAA6", "AAA7"})
+    void shouldThrowExceptionWhenFilterFindsNoneByServiceId(String serviceId) {
+        when(courtVenueService.getCourtVenueByLocationCode(any(), any(), any(), any()))
             .thenReturn(List.of(loc2));
 
-        assertThatThrownBy(() -> service.getCourtLocation(auth, "AAA"))
+        assertThatThrownBy(() -> service.getCourtLocation(auth, "AAA", serviceId))
             .isInstanceOf(LocationRefDataException.class)
             .hasMessageContaining("No court Location Found");
+    }
+
+    private List<LocationRefData> getMockLocationList(String serviceId) {
+        if ("AAA6".equals(serviceId)) {
+            return List.of(loc1);
+        }
+        return List.of(loc2);
     }
 }
